--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </form>
         <div class="contact-right">
             <img src="assets/QR.png" alt="">
-            <h3>Scan For Payment</h3>
+            <h3>Gcash</h3>
         </div>
     </div>
 </body>
